--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,9 +1,47 @@
+.display {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 80px;
+}
+
+.subhead {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 28px;
+}
+
+.subhead--small {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.subhead--large {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 36px;
+}
+
 p.text--small {
   font-size: 12px;
   line-height: 18px;
 }
 
 p.text--large {
-  font-size: 20px;
+  font-size: 24px;
   line-height: 36px;
+}
+
+p.font--secondary {
+  font-size: 24px;
+  line-height: 28px;
+  font-family: 'Lato', sans-serif;
+}
+
+p.font--secondary.text--small {
+  font-size: 16px;
+}
+
+p.font--secondary.text--large {
+  font-size: 32px;
 }
