--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import 'normalize.css';
-@import 'flexboxgrid';
+@import '../node_modules/normalize.css/normalize.css';
+@import '../node_modules/flexboxgrid/dist/flexboxgrid.min.css';
 @import './css/colors.css';
 @import './css/base.css';
 @import './css/typography.css';
