--- a/src/css/gradients.css
+++ b/src/css/gradients.css
@@ -1,10 +1,10 @@
 :root {
-  --gradient-nebulosa: linear-gradient(47.32deg, #D991E0 0%, #00C6D4 60.06%, #00EA60 100%);
-  --gradient-andromeda: linear-gradient(45deg, #EA9297 0%, #E078D6 100%);
-  --gradient-sombrero: linear-gradient(45.52deg, #9CF184 0%, #3DB5EB 100%);
-  --gradient-milky-way: linear-gradient(44.64deg, #159CE4 0%, #E078D6 100%);
-  --gradient-centaurus: linear-gradient(225deg, #E078D6 0%, #993C85 100%);
-  --gradient-whirlpool: linear-gradient(225deg, #9CF184 0%, #56B53F 100%);
-  --gradient-cartwheel: linear-gradient(45deg, #147EC1 0%, #3DB5EB 100%);
-  --gradient-black-hole: linear-gradient(225deg, #3F4C55 0%, #1C2124 100%);
+  --gradient-nebulosa: linear-gradient(47.32deg, #d991e0 0%, #00c6d4 60.06%, #00ea60 100%);
+  --gradient-andromeda: linear-gradient(45deg, #ea9297 0%, #e078d6 100%);
+  --gradient-sombrero: linear-gradient(45.52deg, #9cf184 0%, #3db5eb 100%);
+  --gradient-milky-way: linear-gradient(44.64deg, #159ce4 0%, #e078d6 100%);
+  --gradient-centaurus: linear-gradient(225deg, #e078d6 0%, #993c85 100%);
+  --gradient-whirlpool: linear-gradient(225deg, #9cf184 0%, #56b53f 100%);
+  --gradient-cartwheel: linear-gradient(45deg, #147ec1 0%, #3db5eb 100%);
+  --gradient-black-hole: linear-gradient(225deg, #3f4c55 0%, #1c2124 100%);
 }
