--- a/src/css/base.css
+++ b/src/css/base.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-size: 16px;
+  line-height: 1.5;
   color: var(--color-moon-900);
   text-rendering: optimizeLegibility;
 }
@@ -22,30 +23,28 @@ img {
   height: auto;
 }
 
-p {
-  line-height: 28px;
-  color: var(--color-moon-900);
-}
-
 h1,
 .h1 {
   font-size: 48px;
   font-weight: 700;
-  line-height: 80px;
 }
 
 h2,
 .h2 {
   font-size: 40px;
   font-weight: 700;
-  line-height: 56px;
 }
 
 h3,
 .h3 {
   font-size: 32px;
-  font-weight: 700;
-  line-height: 40px;
+  font-weight: 600;
+}
+
+h4,
+.h4 {
+  font-size: 24px;
+  font-weight: 600;
 }
 
 a {
