--- a/src/css/base.css
+++ b/src/css/base.css
@@ -48,9 +48,22 @@ h4,
 }
 
 a {
-  text-decoration: none;
+  color: var(--color-uranus-700);
+  text-decoration: underline;
   cursor: pointer;
   word-wrap: break-word;
+}
+
+a:hover {
+  color: var(--color-uranus-500);
+}
+
+a:active {
+  color: var(--color-uranus-800);
+}
+
+a.btn {
+  text-decoration: none;
 }
 
 li,
