--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @import './css/colors.css';
 @import './css/base.css';
 @import './css/typography.css';
+@import './css/checkbox.css';
 @import './css/buttons.css';
 @import './css/gradients.css';
