Change selector structure and add "astro" prefixes (#28)
* Change selector structure and add Astro prefixes
* Update readme
* Fix minor checkbox bug
* Refactor and update typography styles

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,9 +1,6 @@
-body {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--color-moon-900);
+.a-body { /* styles replicated in typography to allow isolation */
+  font: var(--font-primary);
+  color: var(--font-color);
   text-rendering: optimizeLegibility;
 }
 
@@ -23,51 +20,27 @@ img {
   height: auto;
 }
 
-h1,
-.h1 {
-  font-size: 48px;
-  font-weight: 700;
+li,
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-h2,
-.h2 {
-  font-size: 40px;
-  font-weight: 700;
-}
-
-h3,
-.h3 {
-  font-size: 32px;
-  font-weight: 600;
-}
-
-h4,
-.h4 {
-  font-size: 24px;
-  font-weight: 600;
-}
-
-a {
+.a-link {
   color: var(--color-uranus-700);
   text-decoration: underline;
   cursor: pointer;
   word-wrap: break-word;
 }
 
-a:hover {
+.a-link:hover {
   color: var(--color-uranus-500);
 }
 
-a:active {
+.a-link:active {
   color: var(--color-uranus-800);
 }
 
-a.btn {
+.a-link.a-btn {
   text-decoration: none;
-}
-
-li,
-ul {
-  list-style: none;
-  padding: 0;
 }
