--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -1,6 +1,6 @@
 /* Base button styles */
 
-.btn {
+.a-btn {
   cursor: pointer;
   display: inline-block;
   white-space: nowrap;
@@ -9,8 +9,8 @@
   overflow: hidden;
 }
 
-.btn:disabled,
-.btn.disabled {
+.a-btn:disabled,
+.a-btn.a-btn--disabled {
   cursor: not-allowed;
   background-color: var(--color-moon-200);
   border-color: var(--color-moon-200);
@@ -19,87 +19,87 @@
 
 /* Button color modifiers */
 
-.btn--uranus {
+.a-btn--uranus {
   background-color: var(--color-uranus-500);
   border: 2px solid var(--color-uranus-500);
   color: var(--color-space-100);
 }
 
-.btn--uranus:hover:not(:disabled) {
+.a-btn--uranus:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-uranus-400);
   border-color: var(--color-uranus-400);
 }
 
-.btn--uranus:active:not(:disabled) {
+.a-btn--uranus:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-uranus-600);
   border-color: var(--color-uranus-600);
 }
 
-.btn--venus {
+.a-btn--venus {
   background-color: var(--color-venus-400);
   border: 2px solid var(--color-venus-400);
   color: var(--color-space-100);
 }
 
-.btn--venus:hover:not(:disabled) {
+.a-btn--venus:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-venus-300);
   border-color: var(--color-venus-300);
 }
 
-.btn--venus:active:not(:disabled) {
+.a-btn--venus:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-venus-500);
   border-color: var(--color-venus-500);
 }
 
-.btn--mars {
+.a-btn--mars {
   background-color: var(--color-mars-500);
   border: 2px solid var(--color-mars-500);
   color: var(--color-space-100);
 }
 
-.btn--mars:hover:not(:disabled) {
+.a-btn--mars:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-mars-400);
   border-color: var(--color-mars-400);
 }
 
-.btn--mars:active:not(:disabled) {
+.a-btn--mars:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-mars-600);
   border-color: var(--color-mars-600);
 }
 
-.btn--earth {
+.a-btn--earth {
   background-color: var(--color-earth-400);
   border: 2px solid var(--color-earth-400);
   color: var(--color-moon-900);
 }
 
-.btn--earth:hover:not(:disabled) {
+.a-btn--earth:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-earth-300);
   border-color: var(--color-earth-300);
 }
 
-.btn--earth:active:not(:disabled) {
+.a-btn--earth:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-earth-500);
   border-color: var(--color-earth-500);
 }
 
 /* Button size modifiers */
 
-.btn--small {
+.a-btn--small {
   padding: 5px 37px;
   border-radius: 16px;
   font-size: 12px;
   line-height: 18px;
 }
 
-.btn--medium {
+.a-btn--medium {
   padding: 8px 38px;
   border-radius: 24px;
   font-size: 16px;
   line-height: 28px;
 }
 
-.btn--large {
+.a-btn--large {
   padding: 12px 71px;
   border-radius: 31px;
   font-size: 24px;
@@ -108,73 +108,73 @@
 
 /* Outline button */
 
-.btn--outline-uranus {
+.a-btn--outline-uranus {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-uranus-500);
   color: var(--color-uranus-500);
 }
 
-.btn--outline-uranus:hover:not(:disabled) {
+.a-btn--outline-uranus:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-uranus-400);
   border-color: var(--color-uranus-400);
   color: var(--color-space-100);
 }
 
-.btn--outline-uranus:active:not(:disabled) {
+.a-btn--outline-uranus:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-uranus-600);
   border-color: var(--color-uranus-600);
   color: var(--color-space-100);
 }
 
-.btn--outline-venus {
+.a-btn--outline-venus {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-venus-400);
   color: var(--color-venus-400);
 }
 
-.btn--outline-venus:hover:not(:disabled) {
+.a-btn--outline-venus:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-venus-300);
   border-color: var(--color-venus-300);
   color: var(--color-space-100);
 }
 
-.btn--outline-venus:active:not(:disabled) {
+.a-btn--outline-venus:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-venus-500);
   border-color: var(--color-venus-500);
   color: var(--color-space-100);
 }
 
-.btn--outline-earth {
+.a-btn--outline-earth {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-earth-600);
   color: var(--color-earth-600);
 }
 
-.btn--outline-earth:hover:not(:disabled) {
+.a-btn--outline-earth:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-earth-300);
   border-color: var(--color-earth-300);
   color: var(--color-moon-900);
 }
 
-.btn--outline-earth:active:not(:disabled) {
+.a-btn--outline-earth:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-earth-500);
   border-color: var(--color-earth-500);
   color: var(--color-moon-900);
 }
 
-.btn--outline-mars {
+.a-btn--outline-mars {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-mars-500);
   color: var(--color-mars-500);
 }
 
-.btn--outline-mars:hover:not(:disabled) {
+.a-btn--outline-mars:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-mars-400);
   border-color: var(--color-mars-400);
   color: var(--color-space-100);
 }
 
-.btn--outline-mars:active:not(:disabled) {
+.a-btn--outline-mars:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-mars-600);
   border-color: var(--color-mars-600);
   color: var(--color-space-100);
@@ -182,14 +182,14 @@
 
 /* stylelint-disable no-descending-specificity */
 
-.btn--outline-uranus:disabled,
-.btn--outline-venus:disabled,
-.btn--outline-earth:disabled,
-.btn--outline-mars:disabled,
-.btn--outline-uranus.disabled,
-.btn--outline-venus.disabled,
-.btn--outline-earth.disabled,
-.btn--outline-mars.disabled {
+.a-btn--outline-uranus:disabled,
+.a-btn--outline-venus:disabled,
+.a-btn--outline-earth:disabled,
+.a-btn--outline-mars:disabled,
+.a-btn--outline-uranus.a-btn--disabled,
+.a-btn--outline-venus.a-btn--disabled,
+.a-btn--outline-earth.a-btn--disabled,
+.a-btn--outline-mars.a-btn--disabled {
   cursor: not-allowed;
   background-color: var(--color-space-100);
   border-color: var(--color-moon-200);
@@ -200,73 +200,73 @@
 
 /* Ghost button */
 
-.btn--ghost-uranus {
+.a-btn--ghost-uranus {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-space-100);
   color: var(--color-uranus-500);
 }
 
-.btn--ghost-uranus:hover:not(:disabled) {
+.a-btn--ghost-uranus:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-100);
   border-color: var(--color-moon-100);
   color: var(--color-uranus-400);
 }
 
-.btn--ghost-uranus:active:not(:disabled) {
+.a-btn--ghost-uranus:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-200);
   border-color: var(--color-moon-200);
   color: var(--color-uranus-600);
 }
 
-.btn--ghost-venus {
+.a-btn--ghost-venus {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-space-100);
   color: var(--color-venus-400);
 }
 
-.btn--ghost-venus:hover:not(:disabled) {
+.a-btn--ghost-venus:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-100);
   border-color: var(--color-moon-100);
   color: var(--color-venus-300);
 }
 
-.btn--ghost-venus:active:not(:disabled) {
+.a-btn--ghost-venus:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-200);
   border-color: var(--color-moon-200);
   color: var(--color-venus-500);
 }
 
-.btn--ghost-earth {
+.a-btn--ghost-earth {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-space-100);
   color: var(--color-earth-600);
 }
 
-.btn--ghost-earth:hover:not(:disabled) {
+.a-btn--ghost-earth:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-100);
   border-color: var(--color-moon-100);
   color: var(--color-earth-300);
 }
 
-.btn--ghost-earth:active:not(:disabled) {
+.a-btn--ghost-earth:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-200);
   border-color: var(--color-moon-200);
   color: var(--color-earth-800);
 }
 
-.btn--ghost-mars {
+.a-btn--ghost-mars {
   background-color: var(--color-space-100);
   border: 2px solid var(--color-space-100);
   color: var(--color-mars-500);
 }
 
-.btn--ghost-mars:hover:not(:disabled) {
+.a-btn--ghost-mars:hover:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-100);
   border-color: var(--color-moon-100);
   color: var(--color-mars-400);
 }
 
-.btn--ghost-mars:active:not(:disabled) {
+.a-btn--ghost-mars:active:not(:disabled):not(.a-btn--disabled) {
   background-color: var(--color-moon-200);
   border-color: var(--color-moon-200);
   color: var(--color-mars-600);
@@ -274,14 +274,14 @@
 
 /* stylelint-disable no-descending-specificity */
 
-.btn--ghost-uranus:disabled,
-.btn--ghost-venus:disabled,
-.btn--ghost-earth:disabled,
-.btn--ghost-mars:disabled,
-.btn--ghost-uranus.disabled,
-.btn--ghost-venus.disabled,
-.btn--ghost-earth.disabled,
-.btn--ghost-mars.disabled {
+.a-btn--ghost-uranus:disabled,
+.a-btn--ghost-venus:disabled,
+.a-btn--ghost-earth:disabled,
+.a-btn--ghost-mars:disabled,
+.a-btn--ghost-uranus.a-btn--disabled,
+.a-btn--ghost-venus.a-btn--disabled,
+.a-btn--ghost-earth.a-btn--disabled,
+.a-btn--ghost-mars.a-btn--disabled {
   cursor: not-allowed;
   background-color: var(--color-space-100);
   border-color: var(--color-space-100);
