--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -1,13 +1,13 @@
-.checkbox > input[type='checkbox'] {
+.a-checkbox > input[type='checkbox'] {
   opacity: 0;
 }
 
-.checkbox--disabled {
+.a-checkbox--disabled > label {
   cursor: not-allowed;
   opacity: 0.2;
 }
 
-.checkbox > label {
+.a-checkbox > label {
   position: relative;
   display: inline-block;
   padding-left: 24px;
@@ -15,14 +15,14 @@
   font-size: 16px;
 }
 
-.checkbox > label::before,
-.checkbox > label::after {
+.a-checkbox > label::before,
+.a-checkbox > label::after {
   position: absolute;
   display: inline-block;
   content: '';
 }
 
-.checkbox > label::before {
+.a-checkbox > label::before {
   top: 4px;
   left: 0;
   width: 16px;
@@ -31,7 +31,7 @@
   border-radius: 2px;
 }
 
-.checkbox > label::after {
+.a-checkbox > label::after {
   top: 8px;
   left: 3px;
   width: 11px;
@@ -42,7 +42,7 @@
   border-left: 2px solid;
 }
 
-.checkbox--indeterminate > input[type='checkbox'] + label::after {
+.a-checkbox--indeterminate > input[type='checkbox'] + label::after {
   top: 11px;
   left: 4px;
   width: 8px;
@@ -50,23 +50,15 @@
   border-left: 0;
 }
 
-.checkbox > input[type='checkbox'] + label::after {
-  content: none;
-}
-
-.checkbox > input[type='checkbox']:checked + label::after {
-  content: '';
-}
-
-.checkbox > input[type='checkbox']:checked + label::before {
+.a-checkbox > input[type='checkbox']:checked + label::before {
   border-color: var(--color-uranus-500);
   background-color: var(--color-uranus-500);
 }
 
-.checkbox > input[type='checkbox']:disabled + label::before {
+.a-checkbox > input[type='checkbox']:disabled + label::before {
   opacity: 0.5;
 }
 
-.checkbox > input[type='checkbox']:hover:not(:disabled) + label::before {
+.a-checkbox > input[type='checkbox']:hover:not(:disabled) + label::before {
   border-color: var(--color-uranus-500);
 }
