--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,33 +1,60 @@
-/* Looking for headings? They aren't here; headings are in h1-h4 element selectors in base.css file */
+/* Default styles */
+
+.a-text--display,
+.a-title--large,
+.a-title--medium,
+.a-title--small,
+.a-text--large,
+.a-text--medium,
+.a-text--small {
+  font: var(--font-primary);
+  color: var(--font-color);
+}
+
+.a-text--secondary-large,
+.a-text--secondary-medium,
+.a-text--secondary-small {
+  font: var(--font-secondary);
+  color: var(--font-color);
+}
 
 /* Display */
 
-.text--display {
+.a-text--display {
   font-size: 64px;
   font-weight: 700;
 }
 
-/* Paragraph - medium size is in default p element */
+/* Title */
 
-p.text--small {
-  font-size: 12px;
+.a-title--large {
+  font-size: 48px;
 }
 
-p.text--large {
+.a-title--medium {
+  font-size: 40px;
+}
+
+.a-title--small {
+  font-size: 32px;
+}
+
+/* Paragraph */
+
+.a-text--large {
   font-size: 24px;
+}
+
+.a-text--small {
+  font-size: 12px;
 }
 
 /* Secondary font */
 
-p.text--secondary {
-  font-family: 'Lato', sans-serif;
+.a-text--secondary-large {
   font-size: 24px;
 }
 
-p.text--secondary.text--small {
-  font-size: 16px;
-}
-
-p.text--secondary.text--large {
-  font-size: 32px;
+.a-text--secondary-small {
+  font-size: 12px;
 }
