--- a/src/css/radio.css
+++ b/src/css/radio.css
@@ -9,8 +9,7 @@
 
 .a-radio > label {
   display: flex;
-  font-family: var(--font-secondary);
-  font-size: 16px;
+  font: var(--font-secondary);
   align-items: top;
 }
 
@@ -58,4 +57,11 @@
 
 .a-radio > input[type='radio']:hover:not(:disabled) + label::before {
   border-color: var(--color-uranus-500);
+}
+
+/* Cursor */
+
+.a-radio > input[type='radio']:hover:not(:disabled),
+.a-radio > input[type='radio']:hover:not(:disabled) + label {
+  cursor: pointer;
 }
