--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -1,10 +1,12 @@
+/* stylelint-disable no-descending-specificity */
+
 .a-checkbox > input[type='checkbox'] {
   opacity: 0;
 }
 
 .a-checkbox--disabled > label {
   cursor: not-allowed;
-  opacity: 0.2;
+  color: var(--color-moon-200);
 }
 
 .a-checkbox > label {
@@ -49,13 +51,21 @@
   border-left: 0;
 }
 
+.a-checkbox--indeterminate > input[type='checkbox']:disabled + label::after {
+  background-color: var(--color-moon-200);
+}
+
 .a-checkbox > input[type='checkbox']:checked + label::before {
   border-color: var(--color-uranus-500);
   background-color: var(--color-uranus-500);
 }
 
+.a-checkbox > input[type='checkbox']:checked:disabled + label::before {
+  background-color: var(--color-moon-200);
+}
+
 .a-checkbox > input[type='checkbox']:disabled + label::before {
-  opacity: 0.5;
+  border-color: var(--color-moon-200);
 }
 
 .a-checkbox > input[type='checkbox']:hover:not(:disabled) + label::before {
