--- a/src/css/toggle.css
+++ b/src/css/toggle.css
@@ -1,3 +1,5 @@
+/* stylelint-disable no-descending-specificity */
+
 /* Variables */
 
 .a-toggle {
@@ -79,11 +81,14 @@
 
 /* Disabled state */
 
+.a-toggle > input[type='checkbox']:disabled::before {
+  background-color: var(--color-moon-200);
+}
+
 .a-toggle--disabled > label,
 .a-toggle > input[type='checkbox']:disabled {
   cursor: not-allowed;
-  opacity: 0.3;
-  color: var(--color-moon-400);
+  color: var(--color-moon-200);
 }
 
 /* Cursor */
