--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,5 @@
 @import './css/checkbox.css';
 @import './css/buttons.css';
 @import './css/toggle.css';
+@import './css/inputs.css';
 @import './css/slider.css';
