Create tabs component (#41)
* Add initial design for tabs component

* Add optional content panel engine

* Update tabs docs

* Add Astro's icon engine and tab's component icons

* Add official Astro icons

* Fix canvas of the Astro icons

* Refine icon engine

* Add responsive design support

* Add introductory text

* Update tabs component docs about icons usage

* Remove unused variables

* Fix typo in tab text classname

* Fix incorrect HTML property in tabs component

* Add z-index control vars

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @import '../node_modules/flexboxgrid/dist/flexboxgrid.min.css';
 @import './css/colors.css';
 @import './css/gradients.css';
+@import './css/z-index.css';
 @import './css/fonts.css';
+@import './css/icons.css';
 @import './css/base.css';
 @import './css/typography.css';
 @import './css/radio.css';
@@ -11,3 +13,4 @@
 @import './css/toggle.css';
 @import './css/inputs.css';
 @import './css/slider.css';
+@import './css/tabs.css';
