Refactoring components to standardize disabled state and add accessibility properties. (#51)
* Change radio label order to above input

* Change checkbox label order to above input

* Change slider label order to above input

* Add accessibilities properties on input html

* Add disabled instructions into docs

* Fix cursor on disabled and normal states

* Apply disabled text suggestions from code review

Co-Authored-By: elmarques <elson@marques.ws>

* Fix radio button right spacing

* Fix :hover area on controls & toggles components

* Fix linter warnings in checkbox, radio and toggle components

* Change tab hover color

--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -1,7 +1,14 @@
-/* stylelint-disable no-descending-specificity */
+.a-checkbox {
+  --checkbox-square-size: 16px;
 
-.a-checkbox > input[type='checkbox'] {
-  opacity: 0;
+  display: flex;
+}
+
+.a-checkbox > label {
+  padding-left: 8px;
+  cursor: pointer;
+  font: var(--font-secondary);
+  order: 2;
 }
 
 .a-checkbox--disabled > label {
@@ -9,69 +16,70 @@
   color: var(--color-moon-200);
 }
 
-.a-checkbox > label {
+.a-checkbox > input[type='checkbox'] {
   position: relative;
-  display: inline-block;
-  padding-left: 24px;
-  font: var(--font-secondary);
+  visibility: hidden;
+  width: var(--checkbox-square-size);
+  height: var(--checkbox-square-size);
+  margin: 4px 0;
+  order: 1;
 }
 
-.a-checkbox > label::before,
-.a-checkbox > label::after {
-  position: absolute;
+.a-checkbox > input[type='checkbox']::before {
   display: inline-block;
+  visibility: visible;
+  width: var(--checkbox-square-size);
+  height: var(--checkbox-square-size);
   content: '';
-}
-
-.a-checkbox > label::before {
-  top: 4px;
-  left: 0;
-  width: 16px;
-  height: 16px;
   border: 2px solid var(--color-moon-500);
   border-radius: 2px;
 }
 
-.a-checkbox > label::after {
-  top: 8px;
+.a-checkbox > input[type='checkbox']::after {
+  position: absolute;
+  top: 3px;
   left: 3px;
-  width: 11px;
+  display: inline-block;
+  visibility: visible;
+  width: 10px;
   height: 6px;
+  content: '';
   transform: rotate(-45deg);
   color: var(--color-space-100);
   border-bottom: 2px solid;
   border-left: 2px solid;
 }
 
-.a-checkbox--indeterminate > input[type='checkbox'] + label::after {
-  top: 11px;
+.a-checkbox--indeterminate > input[type='checkbox']::after {
+  top: 8px;
   left: 4px;
   width: 8px;
   transform: rotate(-180deg);
   border-left: 0;
 }
 
-.a-checkbox--indeterminate > input[type='checkbox']:disabled + label::after {
+.a-checkbox--indeterminate > input[type='checkbox']:disabled::before {
   background-color: var(--color-moon-200);
 }
 
-.a-checkbox > input[type='checkbox']:checked + label::before {
+.a-checkbox > input[type='checkbox']:checked::before {
   border-color: var(--color-uranus-500);
   background-color: var(--color-uranus-500);
 }
 
-.a-checkbox > input[type='checkbox']:checked:disabled + label::before {
-  background-color: var(--color-moon-200);
-}
-
-.a-checkbox > input[type='checkbox']:disabled + label::before {
+.a-checkbox > input[type='checkbox']:disabled::before {
   border-color: var(--color-moon-200);
 }
 
-.a-checkbox > input[type='checkbox']:hover:not(:disabled) + label::before {
-  border-color: var(--color-uranus-500);
+.a-checkbox > input[type='checkbox']:checked:disabled::before {
+  background-color: var(--color-moon-200);
 }
 
-.a-checkbox > input[type='checkbox']:hover:not(:disabled) + label {
+.a-checkbox > input[type='checkbox']:disabled {
+  cursor: not-allowed;
+}
+
+.a-checkbox > input[type='checkbox']:hover:not(:disabled) {
   cursor: pointer;
+  border-color: var(--color-uranus-500);
 }
