--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -6,7 +6,9 @@
   cursor: pointer;
   display: inline-block;
   white-space: nowrap;
+  font: var(--font-primary);
   font-weight: 500;
+  text-align: center;
   transition: all 0.3s ease;
   overflow: hidden;
 }
