Refactor Controls & Toggles to fix pseudoclass bug on Firefox (#68)

--- a/src/css/toggle.css
+++ b/src/css/toggle.css
@@ -6,16 +6,21 @@
   --toggle-circle-size: 28px;
 
   display: inline-block;
+  position: relative;
 }
 
 /* Hide standard input */
 
 .a-toggle > input[type='checkbox'] {
-  position: relative;
-  visibility: hidden;
-  width: var(--toggle-base-width);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: var(--toggle-base-height);
   vertical-align: middle;
+  opacity: 0;
+  cursor: pointer;
+  z-index: var(--z-index-1);
 }
 
 /* Label */
@@ -27,9 +32,15 @@
 
 /* Base */
 
-.a-toggle > input[type='checkbox']::before {
+.a-toggle__shape {
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.a-toggle__shape::before {
   display: block;
-  visibility: visible;
   width: var(--toggle-base-width);
   height: var(--toggle-base-height);
   content: '';
@@ -40,7 +51,7 @@
 
 /* Circle */
 
-.a-toggle > input[type='checkbox']::after {
+.a-toggle__shape::after {
   position: absolute;
   top: 1px;
   left: 1px;
@@ -56,22 +67,22 @@
 
 /* On state */
 
-.a-toggle > input[type='checkbox']:checked::before {
+.a-toggle > input[type='checkbox']:checked ~ .a-toggle__shape::before {
   background-color: var(--color-uranus-500);
 }
 
-.a-toggle > input[type='checkbox']:checked::after {
+.a-toggle > input[type='checkbox']:checked ~ .a-toggle__shape::after {
   top: 1px;
   left: 21px;
 }
 
 /* Disabled state */
 
-.a-toggle > input[type='checkbox']:disabled::before {
+.a-toggle > input[type='checkbox']:disabled ~ .a-toggle__shape::before {
   background-color: var(--color-moon-200);
 }
 
-.a-toggle--disabled > label,
+.a-toggle--disabled label,
 .a-toggle > input[type='checkbox']:disabled {
   cursor: not-allowed;
   color: var(--color-moon-200);
@@ -79,19 +90,12 @@
 
 /* Hover state on */
 
-.a-toggle > input[type='checkbox']:not(:disabled):hover::before {
+.a-toggle > input[type='checkbox']:not(:disabled):hover ~ .a-toggle__shape::before {
   background-color: var(--color-uranus-400);
 }
 
 /* Hover state off */
 
-.a-toggle > input[type='checkbox']:not(:checked):not(:disabled):hover::before {
+.a-toggle > input[type='checkbox']:not(:checked):not(:disabled):hover ~ .a-toggle__shape::before {
   background-color: var(--color-moon-300);
-}
-
-/* Cursor */
-
-.a-toggle:not(.a-toggle--disabled) > label:hover,
-.a-toggle > input[type='checkbox']:not(:disabled):hover {
-  cursor: pointer;
 }
