Create ghost inputs and add them to Inputs (#79)

--- a/src/css/inputs.css
+++ b/src/css/inputs.css
@@ -1,3 +1,5 @@
+/* stylelint-disable no-descending-specificity */
+
 .a-input {
   position: relative;
   display: flex;
@@ -140,4 +142,31 @@
   cursor: not-allowed;
   color: var(--color-moon-300);
   font: var(--font-secondary);
+}
+
+/* Ghost inputs */
+
+.a-input--ghost > input,
+.a-input--ghost > input:focus,
+.a-input--ghost.a-input--validated > input,
+.a-input--ghost.a-input--validated > input:focus,
+.a-input--ghost.a-input--invalid > input {
+  border: 1px solid var(--color-space-100);
+  background-color: transparent;
+  color: var(--color-space-100);
+}
+
+.a-input--ghost > label,
+.a-input--ghost > input:focus + label,
+.a-input--ghost.a-input > input::placeholder,
+.a-input--ghost.a-input--validated > label,
+.a-input--ghost.a-input--validated > input:focus + label,
+.a-input--ghost.a-input--invalid > label,
+.a-input--ghost.a-input > .a-input__error {
+  color: var(--color-space-100);
+}
+
+.a-input--ghost.a-input--validated::after,
+.a-input--ghost.a-input--invalid::after {
+  background-color: var(--color-space-100);
 }
